# fractals

./: CMakeLists.txt  README.md
.cache/clangd/index/: Renderer.cpp.218E3099C335786C.idx  Renderer.hpp.A2077F994233D03F.idx  Shader.cpp.A138120C71D096CC.idx  Shader.hpp.5B0861CA6F9D0A61.idx  Window.cpp.4765690815C34E9C.idx  Window.hpp.31848D4ACFABB5F3.idx  context.c.A6DAA2EA4D8266C9.idx  egl_context.c.94D9552AD08E3DAE.idx  glad.c.AF7852B73DA3DCA4.idx  glad.h.7FE0EF6DCE77E078.idx  glfw3.h.DF3D4767E957B310.idx  glfw3native.h.80DBC40E23672D12.idx  glx_context.c.72807239442D313E.idx  init.c.E81B89E3D65E6A85.idx  input.c.27FB980E806DE12C.idx  internal.h.86DC6EDA16465981.idx  khrplatform.h.02F408E683561915.idx  linux_joystick.c.21707BE28AD1EC2D.idx  linux_joystick.h.8D4CA4382B4CF3E4.idx  main.cpp.290A42C09C568E16.idx  mappings.h.E0578BEC533B3062.idx  monitor.c.7A4FE731B7548C08.idx  null_init.c.7CD43919FBE4A0F5.idx  null_joystick.c.8EC60157E6C9313D.idx  null_joystick.h.4468DABE5213DC52.idx  null_monitor.c.96A8EE276432506C.idx  null_platform.h.9BD405FE0C71A9E7.idx  null_window.c.896FD607412C35FD.idx  osmesa_context.c.986EE8B258DDB21B.idx  platform.c.D7682D44064C6D3F.idx  platform.h.4E3F6D24C1486350.idx  posix_module.c.32810C3BE86BAB06.idx  posix_poll.c.ADE0A49744EEC00D.idx  posix_poll.h.AED7D793047F223D.idx  posix_thread.c.3D3D21C95FA43287.idx  posix_thread.h.A4E6D9831C81DF95.idx  posix_time.c.36AF343414971AA6.idx  posix_time.h.8FE3E1CAF7D7E4F2.idx  (+12 more)
include/: Shader.hpp  Window.hpp
shaders/: fragment.glsl  vertex.glsl
src/: Renderer.cpp  Shader.cpp  Window.cpp  main.cpp
